--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="header">
         <div class="brandLogo">
             <a href="index.html">
-                <img src="../assignment-2/images/logo.png" alt="moodBurger">
+                <img src="images/logo.png" alt="moodBurger">
             </a>
         </div>
         <nav>
